--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-USDA_API_KEY = "1RpM9u9tx76Eb5kw5Pi5H9vglr4aEu40hRHymajX"
+USDA_API_KEY = ""
 # EDAMAN_API_KEY = ""
 # EDAMAN_APP_ID = ""
 
@@ -9,7 +9,7 @@ USDA_API_KEY = "1RpM9u9tx76Eb5kw5Pi5H9vglr4aEu40hRHymajX"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 # MogoDB connection string:
-DATABASE_URL="mongodb+srv://codebyanii:YgXTDeKjZyGlePOr@cluster0.wipyvnw.mongodb.net/nutriscan"
+DATABASE_URL="mongodb+srv://<username>:<password>@clusterName.example.mongodb.net/<DatabaseName>"
 
 MONGODB_API_KEY = "<API Key>"
 # Endpoints in a locally deployed app use a base URL specific to the app's deployment region
